--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Portfolio</title>
+    <title>Hemanta Regmi</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
-    <!-- Add or update this line for favicon -->
+    
     <link rel="icon" type="image/png" href="images.jpg" />
 
     <meta property="og:title" content="shining-cv-display" />
