--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Lovable" />
 
     
-    <link rel="icon" type="image/png" href="images.jpg" />
+    <link rel="icon" type="image/png" href="/src/img/images.jpg" />
 
     <meta property="og:title" content="shining-cv-display" />
     <meta property="og:description" content="Lovable Generated Project" />
