--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     
     <link rel="icon" type="image/png" href="/src/img/images.jpg" />
 
-    <meta property="og:title" content="shining-cv-display" />
+    <meta property="og:title" content="Hemanta Regmi" />
     <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://hemantaregmi.com.np/og-image.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
